Expand Registration Functionality (PAYINP-687)
Expand the dynamic client registration functionality, providing new functionality for building the registration request to send to the ASPSP, and changing the client to return the registration response as a full data structure rather than a simple string.